--- a/results.html
+++ b/results.html
@@ -7,52 +7,60 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      color: #333;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      text-align: center;
+      background-color: #2c3e50;
+      color: #ecf0f1;
     }
     h1 {
-      background-color: #007bff;
-      color: white;
+      background-color: #1abc9c;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
       margin: 0;
-      padding: 15px;
-      font-size: 24px;
+      font-size: 28px;
+      text-shadow: 1px 1px 2px #000;
     }
     #resultsContainer {
-      max-width: 900px;
+      max-width: 1200px;
       margin: 20px auto;
-      background: white;
+      background: #34495e;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       padding: 20px;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin: 20px 0;
+      margin-bottom: 20px;
     }
     table th, table td {
-      border: 1px solid #ddd;
-      padding: 8px;
+      border: 1px solid #7f8c8d;
+      padding: 10px;
       text-align: center;
     }
     table th {
-      background-color: #007bff;
+      background-color: #1abc9c;
       color: white;
     }
     .profit {
-      color: green;
+      color: #2ecc71;
       font-weight: bold;
     }
     .loss {
-      color: red;
+      color: #e74c3c;
       font-weight: bold;
     }
     #chartContainer {
       margin: 20px 0;
+      background: #34495e;
+      border-radius: 8px;
+      padding: 10px;
+    }
+    canvas {
+      max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
@@ -95,7 +103,7 @@
   let handsPlayedSoFar = 0;
 
   // Populate table and prepare data for the chart
-  resultsData.forEach((session, index) => {
+  resultsData.forEach((session) => {
     const row = document.createElement('tr');
     const sessionProfit = parseFloat(session.profit);
     cumulativeProfit += sessionProfit;
@@ -126,14 +134,15 @@
       datasets: [{
         label: 'Cumulative Profit',
         data: cumulativeProfits,
-        borderColor: 'green',
-        backgroundColor: 'rgba(0, 128, 0, 0.1)',
+        borderColor: '#2ecc71',
+        backgroundColor: 'rgba(46, 204, 113, 0.1)',
         fill: true,
         tension: 0.3
       }]
     },
     options: {
       responsive: true,
+      maintainAspectRatio: false,
       scales: {
         x: {
           title: {
@@ -167,4 +176,5 @@
 
 </body>
 </html>
+
 
